# rust_benchmarks

./: Cargo.toml  LICENSE  README.md
benches/: remove_special_chars.rs
src/: lib.rs
