[package]
name = "rust_benchmarks"
version = "0.1.0"
authors = ["sibbo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
rand_pcg = "0.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "remove_special_chars"
harness = false